--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -22,7 +22,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/kitchen_companion_4" />
+        app:srcCompat="@drawable/kitchen_companion_4"
+        android:contentDescription="@string/todo1" />
 
     <TextView
         android:id="@+id/textView"
@@ -78,7 +79,7 @@
         android:layout_marginTop="45dp"
         android:layout_marginEnd="297dp"
         android:layout_marginBottom="349dp"
-        android:text="Username"
+        android:text="@string/username"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHighlight="@color/white"
@@ -112,7 +113,8 @@
         app:layout_constraintHorizontal_bias="0.535"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/editTextText"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:autofillHints="Enter Username" />
 
     <TextView
         android:id="@+id/textView3"
@@ -122,7 +124,7 @@
         android:layout_marginTop="59dp"
         android:layout_marginEnd="273dp"
         android:layout_marginBottom="262dp"
-        android:text="Password"
+        android:text="@string/new_password"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHighlight="@color/white"
@@ -152,7 +154,8 @@
         app:layout_constraintHorizontal_bias="0.368"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/editTextText2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:autofillHints="Enter Password" />
 
     <TextView
         android:id="@+id/textView4"
@@ -162,7 +165,7 @@
         android:layout_marginTop="62dp"
         android:layout_marginEnd="324dp"
         android:layout_marginBottom="179dp"
-        android:text="Email"
+        android:text="@string/new_email"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHighlight="@color/white"
@@ -192,5 +195,6 @@
         app:layout_constraintHorizontal_bias="0.951"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:autofillHints="Enter Email" />
 </androidx.constraintlayout.widget.ConstraintLayout>
