--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -16,14 +16,14 @@
         android:layout_marginEnd="86dp"
         android:layout_marginBottom="482dp"
         android:background="#1A237E"
+        android:contentDescription="@string/todo1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/kitchen_companion_4"
-        android:contentDescription="@string/todo1" />
+        app:srcCompat="@drawable/kitchen_companion_4" />
 
     <TextView
         android:id="@+id/textView"
@@ -101,6 +101,7 @@
         android:layout_marginTop="38dp"
         android:layout_marginEnd="31dp"
         android:layout_marginBottom="326dp"
+        android:autofillHints="Enter Username"
         android:background="@color/white"
         android:ems="10"
         android:inputType="text"
@@ -113,8 +114,7 @@
         app:layout_constraintHorizontal_bias="0.535"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/editTextText"
-        app:layout_constraintVertical_bias="0.0"
-        android:autofillHints="Enter Username" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView3"
@@ -146,6 +146,7 @@
         android:layout_marginTop="41dp"
         android:layout_marginEnd="31dp"
         android:layout_marginBottom="243dp"
+        android:autofillHints="Enter Password"
         android:background="@color/white"
         android:ems="10"
         android:inputType="textPassword"
@@ -154,8 +155,7 @@
         app:layout_constraintHorizontal_bias="0.368"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/editTextText2"
-        app:layout_constraintVertical_bias="0.0"
-        android:autofillHints="Enter Password" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView4"
@@ -187,6 +187,7 @@
         android:layout_marginTop="47dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="157dp"
+        android:autofillHints="Enter Email"
         android:background="@color/white"
         android:ems="10"
         android:inputType="textEmailAddress"
@@ -195,6 +196,23 @@
         app:layout_constraintHorizontal_bias="0.951"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
-        app:layout_constraintVertical_bias="0.0"
-        android:autofillHints="Enter Email" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="155dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="165dp"
+        android:layout_marginBottom="93dp"
+        android:background="#1A237E"
+        android:text="@string/create_account"
+        android:textColor="#1A237E"
+        android:textSize="20sp"
+        app:backgroundTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
