--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -4,6 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1A237E"
     tools:context=".homePage">
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="247dp"
+        android:layout_height="281dp"
+        app:srcCompat="@drawable/kitchen_companion_4"
+        tools:layout_editor_absoluteX="82dp"
+        tools:layout_editor_absoluteY="16dp" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="240dp"
+        android:layout_height="118dp"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="164dp"
+        android:layout_marginBottom="318dp"
+        android:text="Recipes"
+        android:textAlignment="center"
+        android:textColor="#1A237E"
+        android:textSize="24sp"
+        app:backgroundTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.459"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:layout_constraintVertical_bias="0.35" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="246dp"
+        android:layout_height="108dp"
+        android:layout_marginStart="162dp"
+        android:layout_marginTop="91dp"
+        android:layout_marginEnd="129dp"
+        android:layout_marginBottom="135dp"
+        android:text="Create New Recipe"
+        android:textAlignment="center"
+        android:textColor="#1A237E"
+        android:textSize="24sp"
+        app:backgroundTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.626"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintVertical_bias="0.629" />
 </androidx.constraintlayout.widget.ConstraintLayout>
