--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="68dp"
         android:layout_marginEnd="164dp"
         android:layout_marginBottom="318dp"
-        android:text="Recipes"
+        android:text="@string/recipes"
         android:textAlignment="center"
         android:textColor="#1A237E"
         android:textSize="24sp"
@@ -43,7 +43,7 @@
         android:layout_marginTop="91dp"
         android:layout_marginEnd="129dp"
         android:layout_marginBottom="135dp"
-        android:text="Create New Recipe"
+        android:text="@string/create_new_recipe"
         android:textAlignment="center"
         android:textColor="#1A237E"
         android:textSize="24sp"
