--- a/app/src/main/res/layout/filter_recipes.xml
+++ b/app/src/main/res/layout/filter_recipes.xml
@@ -30,7 +30,7 @@
         android:layout_marginEnd="166dp"
         android:layout_marginBottom="383dp"
         android:autoText="false"
-        android:text="Search Recipes"
+        android:text="Filter Recipes"
         android:textAlignment="center"
         android:textColor="#1A237E"
         android:textSize="24sp"
